--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Simbiwebapp</title>
+  <title>SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/*" href="simbiatuu-logo.png">
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs">
+  <meta name="description" content="Based in the UK. I support SMEs across various sectors, including health, wellness, tech, lifestyle, hospitality, non-profits, and real estate, utilizing a unique blend of strategy, creativity, and storytelling.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://simbiatuu.uk/">
+  <meta property="og:title" content="SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs">
+  <meta property="og:description" content="Based in the UK. Supporting SMEs in health, wellness, tech, lifestyle, hospitality, non-profits, and real estate through strategy, creativity, and storytelling.">
+  <meta property="og:image" content="simbiatuu-logo-012.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://simbiatuu.uk/">
+  <meta property="twitter:title" content="SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs">
+  <meta property="twitter:description" content="Based in the UK. Supporting SMEs in health, wellness, tech, lifestyle, hospitality, non-profits, and real estate through strategy, creativity, and storytelling.">
+  <meta property="twitter:image" content="simbiatuu-logo-012.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="simbiatuu-logo-012.png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://simbiatuu.uk/">
+
+  <!-- Theme Color for Mobile Browsers -->
+  <meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- WhatsApp Floating Button -->
+  <div class="relative">
+    <div class="fixed" style="bottom:-39px;right:20px; z-index:999999;">
+      <a
+        href="https://wa.me/+447852304977?text=Hello!%20SÍMBÍÀTÚÚ%20here.%20How%20may%20I%20be%20of%20service%20to%20you%20today%3F"
+        target="_blank"
+        class="items-center"
+      >
+        <img src="whatsapp-chat.png" class="w-40" alt="Chat with us on WhatsApp">
+      </a>
+    </div>
+  </div>
 </body>
 </html>
