made another change

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
   <meta property="og:url" content="https://simbiatuu.uk/">
   <meta property="og:title" content="SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs">
   <meta property="og:description" content="Based in the UK. Supporting SMEs in health, wellness, tech, lifestyle, hospitality, non-profits, and real estate through strategy, creativity, and storytelling.">
-  <meta property="og:image" content="simbiatuu-logo-012.png">
+  <meta property="og:image" content="https://simbiatuu.uk/simbiatuu-logo-012.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://simbiatuu.uk/">
   <meta property="twitter:title" content="SÍMBÍÀTÚÚ — a content marketer, a full-stack marketer & a business builder for SMEs">
   <meta property="twitter:description" content="Based in the UK. Supporting SMEs in health, wellness, tech, lifestyle, hospitality, non-profits, and real estate through strategy, creativity, and storytelling.">
-  <meta property="twitter:image" content="simbiatuu-logo-012.png">
+  <meta property="twitter:image" content="https://simbiatuu.uk/simbiatuu-logo-012.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="simbiatuu-logo-012.png">
