--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
   <div class="relative">
     <div class="fixed" style="bottom:-39px;right:20px; z-index:999999;">
       <a
-        href="https://wa.me/+447852304977?text=Hi%20Simbi!%20I%20would%20like%20to%20make%20enquiries%20about%20your%20services."
+        href="https://wa.me/+447852304977?text=Hi%20SÍMBÍÀTÚÚ!%20I%20would%20like%20to%20make%20enquiries%20about%20your%20services?"
         target="_blank"
         class="items-center"
       >
